src/generated/BasicParser.py
# Generated from C:/Users/danil/PycharmProjects/basic-compiler/grammar/Basic.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BasicParser ( Parser ):

    grammarFileName = "Basic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'IF'", "'THEN'", "'ELSE'", "'PRINT'", 
                     "'LET'", "'END'", "'GOTO'", "'FOR'", "'TO'", "'STEP'", 
                     "'NEXT'", "'GOSUB'", "'RETURN'", "'WHILE'", "'WEND'", 
                     "'INPUT'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<'", "'>'", "'<='", "'>='", "'<>'", 
                     "'+'", "'-'", "'*'", "'/'", "'('", "')'", "':'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "NEWLINE", "WS", "REM_COMMENT", "APOSTROPHE_COMMENT", 
                      "IF", "THEN", "ELSE", "PRINT", "LET", "END", "GOTO", 
                      "FOR", "TO", "STEP", "NEXT", "GOSUB", "RETURN", "WHILE", 
                      "WEND", "INPUT", "ID", "NUMBER", "STRING", "ASSIGN", 
                      "EQ", "LT", "GT", "LTE", "GTE", "NEQ", "PLUS", "MINUS", 
                      "MUL", "DIV", "LPAREN", "RPAREN", "COLON", "COMMA", 
                      "SEMICOLON", "TYPE_SUFFIX" ]

    RULE_program = 0
    RULE_lineContent = 1
    RULE_labelDef = 2
    RULE_statement = 3
    RULE_printStmt = 4
    RULE_expressionList = 5
    RULE_letStmt = 6
    RULE_ifStmt = 7
    RULE_gotoStmt = 8
    RULE_forStmt = 9
    RULE_nextStmt = 10
    RULE_gosubStmt = 11
    RULE_returnStmt = 12
    RULE_whileStmt = 13
    RULE_inputStmt = 14
    RULE_targetLabel = 15
    RULE_endStmt = 16
    RULE_variable = 17
    RULE_condition = 18
    RULE_expression = 19
    RULE_comparisonExpr = 20
    RULE_additiveExpr = 21
    RULE_multiplicativeExpr = 22
    RULE_unaryExpr = 23
    RULE_atom = 24

    ruleNames =  [ "program", "lineContent", "labelDef", "statement", "printStmt", 
                   "expressionList", "letStmt", "ifStmt", "gotoStmt", "forStmt", 
                   "nextStmt", "gosubStmt", "returnStmt", "whileStmt", "inputStmt", 
                   "targetLabel", "endStmt", "variable", "condition", "expression", 
                   "comparisonExpr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "atom" ]

    EOF = Token.EOF
    NEWLINE=1
    WS=2
    REM_COMMENT=3
    APOSTROPHE_COMMENT=4
    IF=5
    THEN=6
    ELSE=7
    PRINT=8
    LET=9
    END=10
    GOTO=11
    FOR=12
    TO=13
    STEP=14
    NEXT=15
    GOSUB=16
    RETURN=17
    WHILE=18
    WEND=19
    INPUT=20
    ID=21
    NUMBER=22
    STRING=23
    ASSIGN=24
    EQ=25
    LT=26
    GT=27
    LTE=28
    GTE=29
    NEQ=30
    PLUS=31
    MINUS=32
    MUL=33
    DIV=34
    LPAREN=35
    RPAREN=36
    COLON=37
    COMMA=38
    SEMICOLON=39
    TYPE_SUFFIX=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BasicParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.NEWLINE)
            else:
                return self.getToken(BasicParser.NEWLINE, i)

        def lineContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.LineContentContext)
            else:
                return self.getTypedRuleContext(BasicParser.LineContentContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BasicParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 51
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 50
                        self.lineContent()


                    self.state = 53
                    self.match(BasicParser.NEWLINE) 
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 59
                self.lineContent()


            self.state = 62
            self.match(BasicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def labelDef(self):
            return self.getTypedRuleContext(BasicParser.LabelDefContext,0)


        def NUMBER(self):
            return self.getToken(BasicParser.NUMBER, 0)

        def statement(self):
            return self.getTypedRuleContext(BasicParser.StatementContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_lineContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineContent" ):
                listener.enterLineContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineContent" ):
                listener.exitLineContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineContent" ):
                return visitor.visitLineContent(self)
            else:
                return visitor.visitChildren(self)




    def lineContent(self):

        localctx = BasicParser.LineContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lineContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.state = 64
                self.labelDef()
                pass
            elif token in [-1, 1, 5, 8, 9, 10, 11, 12, 15, 16, 17, 18, 20, 22]:
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==22:
                    self.state = 65
                    self.match(BasicParser.NUMBER)


                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1548064) != 0):
                    self.state = 68
                    self.statement()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def COLON(self):
            return self.getToken(BasicParser.COLON, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_labelDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelDef" ):
                listener.enterLabelDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelDef" ):
                listener.exitLabelDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelDef" ):
                return visitor.visitLabelDef(self)
            else:
                return visitor.visitChildren(self)




    def labelDef(self):

        localctx = BasicParser.LabelDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_labelDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(BasicParser.ID)
            self.state = 74
            self.match(BasicParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printStmt(self):
            return self.getTypedRuleContext(BasicParser.PrintStmtContext,0)


        def letStmt(self):
            return self.getTypedRuleContext(BasicParser.LetStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(BasicParser.IfStmtContext,0)


        def gotoStmt(self):
            return self.getTypedRuleContext(BasicParser.GotoStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(BasicParser.ForStmtContext,0)


        def nextStmt(self):
            return self.getTypedRuleContext(BasicParser.NextStmtContext,0)


        def gosubStmt(self):
            return self.getTypedRuleContext(BasicParser.GosubStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(BasicParser.ReturnStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(BasicParser.WhileStmtContext,0)


        def inputStmt(self):
            return self.getTypedRuleContext(BasicParser.InputStmtContext,0)


        def endStmt(self):
            return self.getTypedRuleContext(BasicParser.EndStmtContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BasicParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.printStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.letStmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.ifStmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.gotoStmt()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.forStmt()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 6)
                self.state = 81
                self.nextStmt()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 7)
                self.state = 82
                self.gosubStmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 8)
                self.state = 83
                self.returnStmt()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 9)
                self.state = 84
                self.whileStmt()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 10)
                self.state = 85
                self.inputStmt()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 11)
                self.state = 86
                self.endStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(BasicParser.PRINT, 0)

        def expressionList(self):
            return self.getTypedRuleContext(BasicParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = BasicParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(BasicParser.PRINT)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 38669385728) != 0):
                self.state = 90
                self.expressionList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.COMMA)
            else:
                return self.getToken(BasicParser.COMMA, i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.SEMICOLON)
            else:
                return self.getToken(BasicParser.SEMICOLON, i)

        def getRuleIndex(self):
            return BasicParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = BasicParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.expression()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38 or _la==39:
                self.state = 94
                _la = self._input.LA(1)
                if not(_la==38 or _la==39):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 95
                self.expression()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(BasicParser.LET, 0)

        def variable(self):
            return self.getTypedRuleContext(BasicParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(BasicParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(BasicParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_letStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStmt" ):
                listener.enterLetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStmt" ):
                listener.exitLetStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStmt" ):
                return visitor.visitLetStmt(self)
            else:
                return visitor.visitChildren(self)




    def letStmt(self):

        localctx = BasicParser.LetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_letStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(BasicParser.LET)
            self.state = 102
            self.variable()
            self.state = 103
            self.match(BasicParser.ASSIGN)
            self.state = 104
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BasicParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(BasicParser.ConditionContext,0)


        def THEN(self):
            return self.getToken(BasicParser.THEN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasicParser.StatementContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.WS)
            else:
                return self.getToken(BasicParser.WS, i)

        def ELSE(self):
            return self.getToken(BasicParser.ELSE, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = BasicParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BasicParser.IF)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 107
                self.match(BasicParser.WS)


            self.state = 110
            self.condition()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 111
                self.match(BasicParser.WS)


            self.state = 114
            self.match(BasicParser.THEN)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 115
                self.match(BasicParser.WS)


            self.state = 118
            self.statement()
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 119
                self.match(BasicParser.ELSE)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 120
                    self.match(BasicParser.WS)


                self.state = 123
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GotoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOTO(self):
            return self.getToken(BasicParser.GOTO, 0)

        def targetLabel(self):
            return self.getTypedRuleContext(BasicParser.TargetLabelContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_gotoStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGotoStmt" ):
                listener.enterGotoStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGotoStmt" ):
                listener.exitGotoStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGotoStmt" ):
                return visitor.visitGotoStmt(self)
            else:
                return visitor.visitChildren(self)




    def gotoStmt(self):

        localctx = BasicParser.GotoStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_gotoStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BasicParser.GOTO)
            self.state = 127
            self.targetLabel()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(BasicParser.FOR, 0)

        def variable(self):
            return self.getTypedRuleContext(BasicParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(BasicParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExpressionContext,i)


        def TO(self):
            return self.getToken(BasicParser.TO, 0)

        def STEP(self):
            return self.getToken(BasicParser.STEP, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = BasicParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BasicParser.FOR)
            self.state = 130
            self.variable()
            self.state = 131
            self.match(BasicParser.ASSIGN)
            self.state = 132
            self.expression()
            self.state = 133
            self.match(BasicParser.TO)
            self.state = 134
            self.expression()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 135
                self.match(BasicParser.STEP)
                self.state = 136
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NextStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEXT(self):
            return self.getToken(BasicParser.NEXT, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.VariableContext)
            else:
                return self.getTypedRuleContext(BasicParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.COMMA)
            else:
                return self.getToken(BasicParser.COMMA, i)

        def getRuleIndex(self):
            return BasicParser.RULE_nextStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNextStmt" ):
                listener.enterNextStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNextStmt" ):
                listener.exitNextStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNextStmt" ):
                return visitor.visitNextStmt(self)
            else:
                return visitor.visitChildren(self)




    def nextStmt(self):

        localctx = BasicParser.NextStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nextStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(BasicParser.NEXT)
            self.state = 140
            self.variable()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38:
                self.state = 141
                self.match(BasicParser.COMMA)
                self.state = 142
                self.variable()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GosubStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOSUB(self):
            return self.getToken(BasicParser.GOSUB, 0)

        def targetLabel(self):
            return self.getTypedRuleContext(BasicParser.TargetLabelContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_gosubStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGosubStmt" ):
                listener.enterGosubStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGosubStmt" ):
                listener.exitGosubStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGosubStmt" ):
                return visitor.visitGosubStmt(self)
            else:
                return visitor.visitChildren(self)




    def gosubStmt(self):

        localctx = BasicParser.GosubStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_gosubStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(BasicParser.GOSUB)
            self.state = 149
            self.targetLabel()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(BasicParser.RETURN, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):
